<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tasksContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tasksLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                style="@style/SpinnerStyle"
                android:id="@+id/sortSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/repositories_list"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emptyRepositoryLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/emptyRepositoryIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/empty_repository_content_description"
                android:src="@drawable/ic_assignment_turned_in_24dp" />

            <TextView
                android:id="@+id/emptyRepositoryTxtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/repositories_list_empty"
                android:layout_marginBottom="@dimen/list_item_padding" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>

