<resources>
    <string name="app_name">CodeChallenge</string>
    <string name="repositories_list_empty">Empty Repository List</string>

    <string-array name="sort_options_array">
        <item>Sort: newest to oldest</item>
        <item>Sort: oldest to newest</item>
    </string-array>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="user_icon_content_description">User icon</string>
    <string name="empty_repository_content_description">Empty repository</string>

    <string name="details_description_title">Description</string>
    <string name="details_last_update_title">Last Update</string>
    <string name="has_fork">has fork</string>
    <string name="hasnt_fork">no forks</string>
    <string name="details_description_text_placeholder">Loading description…</string>
    <string name="details_description_empty_text">Description not available</string>
    <string name="details_languages_title">Languages</string>
    <string name="details_languages_list_text_placeholder">Loading languages list…</string>
    <string name="details_languages_empty_list_text">List is empty</string>
</resources>
